# hpmq-cli

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: lib.rs
src/cli/: args.rs  mod.rs
src/cli/interactive/: emoji.rs  mod.rs  project_variables.rs
