[package]
name = "hpmq_cli"
version = "0.3.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
authors = ["网聚云联边缘计算团队"]
description = "云网关命令行工具"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom-utils = {version="0.8.1"}
log = "0.4.17"
anyhow = "1.0.57"
cargo-generate = "0.15"
structopt = "0.3.26"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.15", default-features = false, features = ["rt-multi-thread", "macros"] }
regex = "1.5"
console = "0.15"
dialoguer = "0.10"
dockerfile-parser = "0.8.0"
oci-util = "0.2.0"



#[patch.crates-io]
#oci-util = {path = "../oci-util"}